ubah di pricing

--- a/assets/landingpage/css/style.css
+++ b/assets/landingpage/css/style.css
@@ -321,7 +321,7 @@ h2.section-title-heading {
 	margin-top: 2rem;
 }
 
-#pricing .pricing-table .table-content ul li {
+#pricing .pricing-table .table-content p {
 	list-style: none;
 	text-align: center;
 	padding-bottom: 1rem;
