--- a/assets/loginSignup/style.css
+++ b/assets/loginSignup/style.css
@@ -178,22 +178,22 @@ h2 {
 }
 
 .form-submit {
-	display: inline-block;
-	background: #6dabe4;
-	color: #fff;
-	border-bottom: none;
-	width: auto;
-	padding: 15px 39px;
-	border-radius: 5px;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-o-border-radius: 5px;
-	-ms-border-radius: 5px;
-	margin-top: 25px;
-	cursor: pointer;
+	background: linear-gradient(
+		to right,
+		rgba(0, 172, 217, 0.62),
+		rgba(105, 240, 174, 0.52)
+	);
+	padding: 0.8rem 2rem;
+	border-radius: 2rem;
+	color: #ffffff;
+	font-weight: 600;
 }
+
 .form-submit:hover {
-	background: #4292dc;
+	text-decoration: none;
+	background: #ffffff;
+	color: rgba(0, 172, 217, 0.62);
+	border: 2px solid rgba(0, 172, 217, 0.62);
 }
 
 input,
