--- a/assets/loginSignup/style.css
+++ b/assets/loginSignup/style.css
@@ -104,7 +104,7 @@ h2 {
 	-webkit-border-radius: 20px;
 	-o-border-radius: 20px;
 }
-
+/*signup*/
 .container-signup {
 	width: 900px;
 	background: rgba(255, 255, 255, 0.2);
