--- a/assets/loginSignup/style.css
+++ b/assets/loginSignup/style.css
@@ -155,6 +155,27 @@ h2 {
 	padding-left: 34px;
 }
 
+.informasi-pembayaran {
+	text-decoration: underline;
+	font-size: 14px;
+	color: #222;
+	display: block;
+	text-align: center;
+	cursor: pointer;
+}
+
+.bg-color {
+	background-color: rgba(157, 227, 255, 0.671);
+}
+
+.info-nomor,
+.info-total-harga,
+.info-proses {
+	background-color: white;
+	border-radius: 10px;
+	padding: 10px;
+}
+
 .form-title {
 	margin-bottom: 33px;
 }
